--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -132,6 +132,7 @@
             <img class="boxed" src="/images/openstax-tutor/ten-dollars.svg">
         </section>
         <section id="science">
+            <div id="particles" skip="true"></div>
             <div class="text-content">
                 <h1>The science behind OpenStax Tutor Beta</h1>
                 <p>
