--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -609,6 +609,14 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
         }
     }
 
+    #particles {
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+
     .divider {
         overflow: hidden;
         pointer-events: none;
