Fix footer and sticky footer
Let fixed items float over footer

--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -4,12 +4,12 @@
     <if condition="model.frontier">
         <div class="sticky-footer {model.footerHeight}">
             <div class="button-group">
-                <a href="{model.footerStarted.link}" class="btn">{model.footerStarted.text}</a>
+                <a href="{model.footerStarted.link}" class="btn medium">{model.footerStarted.text}</a>
                 <div class="description">{model.footerStarted.description}</div>
             </div>
             <div if="model.footerSignUp" class="button-group">
-                <a href="{model.footerSignUp.link}" class="btn">{model.footerSignUp.text}</a>
                 <div class="description">{model.footerSignUp.description}</div>
+                <a href="{model.footerSignUp.link}" class="btn medium">{model.footerSignUp.text}</a>
             </div>
         </div>
         <section id="new-frontier">
