--- a/src/app/components/form-input/form-input.html
+++ b/src/app/components/form-input/form-input.html
@@ -1,13 +1,16 @@
 <template args="model">
-    {model.label}
-    <span class="invalid-message">{model.validationMessage(model.name)}</span>
-    <input name="{model.name}" type="{model.type}" value="{model.value}"
-     pattern="{model.pattern}" min="{model.min}" max="{model.max}"
-     placeholder="{model.placeholder}"
-     required="{model.required ? '' : null}">
-    <div if="model.matches" class="suggestions">
-        <div class="suggestion-box">
-            <div class="suggestion{match === model.activeSuggestion ? ' active' : ''}" each="match in model.matches">{match}</div>
+    <div class="control-group">
+        <label class="field-label">{model.label}</label>
+        <input name="{model.name}" type="{model.type}" value="{model.value}"
+         pattern="{model.pattern}" min="{model.min}" max="{model.max}"
+         placeholder="{model.placeholder}"
+         required="{model.required ? '' : null}"
+        >
+        <div class="invalid-message">{model.validationMessage(model.name)}</div>
+        <div if="model.matches" class="suggestions">
+            <div class="suggestion-box">
+                <div class="suggestion{match === model.activeSuggestion ? ' active' : ''}" each="match in model.matches">{match}</div>
+            </div>
         </div>
     </div>
 </template>
