--- a/src/app/components/form-checkboxgroup/form-checkboxgroup.html
+++ b/src/app/components/form-checkboxgroup/form-checkboxgroup.html
@@ -3,6 +3,15 @@
     <label if="model.instructions" class="hint">{' ' + model.instructions}</label>
     <div class="invalid-message">{model.validationMessage(model.name)}</div>
     <div each="item in model.options" class="control-group">
-        <label><input type="checkbox" name="{model.name}" value="{item.value}">{item.label}</label>
+        <label>
+            <if condition="item.value">
+                <input type="checkbox"
+                    name="{model.name}"
+                    value="{item.value}">
+            <else>
+                <input type="checkbox">
+            </if>
+            {item.label}
+        </label>
     </div>
 </template>
