--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -62,7 +62,7 @@
                 <br>
                 <div class="flexrow">
                     <button type="button" class="btn secondary back">Back</button>
-                    <button type="button" class="btn primary next">Next</button>
+                    <button type="submit" class="btn primary">Submit</button>
                 </div>
             </div>
             <div
