--- a/src/app/components/calculator/calculator.scss
+++ b/src/app/components/calculator/calculator.scss
@@ -102,6 +102,7 @@ $narrow-tablet: 700px;
             font-family: inherit;
             font-size: 560%;
             font-weight: inherit;
+            height: auto;
             outline: none;
             padding: 0;
             text-align: center;
@@ -181,7 +182,7 @@ $narrow-tablet: 700px;
                 align-items: flex-start;
                 display: flex;
                 flex-direction: row;
-                justify-content: flex-start;
+                justify-content: center;
                 line-height: 1;
 
                 @include width-up-to($phone-max) {
