--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -29,6 +29,7 @@
             <img if="model.studentImage" src="{`/images/components/${model.studentImage}`}" alt=""/>
         </div>
     </div>
+    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     <div if="model.belowHeader" class="wrapper">
         <div class="text-content">
             <div class="below-header-text">{model.belowHeader.text}</div>
@@ -40,7 +41,6 @@
         </div>
     </div>
     <div class="wrapper">
-        <savings-calculator class="boxed" skip="true"></savings-calculator>
         <detail-block class="boxed" skip="true"></detail-block>
         <div class="text-content labeled-inputs row book-info">
         </div>
